     and would not wait for one driver to complete initialization before
     starting another in case of mass-management loop to start all drivers
     (without specifying the single device) [#1759, #1806, #1875]
   * The `apcsmart` and `apcsmart-old` handled invalid data too zealously
     and aborted instead of skipping over it, like they did before [#2015]
   * Something about compile-time macros or other warnings-related refactoring
     seems to have confused the MGE SHUT (Serial HID UPS Transfer) driver
     support [#2022]
   * Some warnings were not detected by the tools or build scenarios used
     earlier, and only got addressed now

 - An issue was identified which could cause `libupsclient` parser of device
   and host names to crash upon bad inputs (e.g. poorly resolved environment
   variables in scripts). Now it should fail more gracefully [#2052]

 - New `configure --enable-inplace-runtime` option should set default values
   for `--sysconfdir`, `--with-user` and `--with-group` options to match an
   existing NUT deployment -- for users who are trying if a custom build
   of recent codebase solves their practical issues. For "quick tests", a
   shortcut operation `./ci_build.sh inplace` was added [#1714]

 - State tree structure and methods (including "dstate" wrapper for common
   driver internals) was enhanced with time-stamping of last modification
   (setting, changing, deleting the value or some fields in an entry):
   this allows to detect stale information in a centralized fashion [#2010]

 - We lacked log information about changes of chroot jail (uncommon) and
   of UID/GID (everywhere), which makes troubleshooting harder (e.g. lack
   of access to config files or USB device nodes). Now we have it [#1694]

 - A `NUT_DEBUG_PID` envvar (presence) support was added to add current
   process ID to tags with debug-level identifiers. This may be useful
   when many NUT daemons write to the same console or log file. [#2118]
