@@ -67,14 +67,12 @@ uint16_t riello_calc_CRC(uint8_t type, uint8_t *buff, uint16_t size, uint8_t che
 				size--;
 				CRC_Word = 0x554D;
 				while(size--) {
-					pom  = (CRC_Word ^ *buff) & 0x00ff;
-					pom  = (pom ^ (pom << 4)) & 0x00ff;
-					/* Thanks to &0xff above, pom is at most 255 --
-					 * so shifted by 8 bits is still uint16_t range
+					pom = (CRC_Word ^ *buff) & 0x00ff;
+					pom = (pom ^ (pom << 4)) & 0x00ff;
+					/* Thanks to &0x00ff above, pom is at most 255 --
+					 * so shifted by 8 bits is still uint16_t range:
 					 */
-					pom  = (uint16_t)(pom << 8);
-					pom ^= (pom << 3);
-					pom ^= (pom >> 4);
+					pom = (pom << 8) ^ (pom << 3) ^ (pom >> 4);
 					CRC_Word = (CRC_Word >> 8) ^ pom;
 					buff++;
 				}
